# TradingBot_Upstox

./: .gitattributes  .gitignore  CMakeLists.txt  JIRA_TASKS.md  README.md  config.example.json  create_jira_project.py  create_jira_tasks.py  jira_import.csv
docs/: continuous_scanner_fresh_signal_gating_plan.md  continuous_websocket_dashboard_plan.md  historical_candle_bulk_download_plan.md  historical_download_upstox_json_source_plan.md  live_scanner_per_strategy_freshness_plan.md  live_trading_acceptance_checklist.md  offline_historical_scanner_report_plan.md  offline_scanner_chart_evidence_plan.md  offline_scanner_report_enrichment_plan.md  online_websocket_scanner_plan.md  provisional_live_rsi_divergence_plan.md  srs_open_decisions.md  upstox_instrument_cache_metadata_plan.md  upstox_instrument_fetch_cache_plan.md  upstox_instrument_universe_plan.md
include/tradingbot/app/: app_runner.hpp  cli.hpp  operating_mode.hpp  order_display.hpp
include/tradingbot/core/: domain.hpp
include/tradingbot/infra/: candle_service.hpp  config.hpp  credentials.hpp  instrument_csv.hpp  instrument_universe.hpp  live_scanner_config_mapper.hpp  logger.hpp  market_feed.hpp  market_quote_service.hpp  portfolio_sync_service.hpp  time_utils.hpp  upstox_api_client.hpp  upstox_instrument_json.hpp  upstox_instrument_json_cache.hpp  win_http_transport.hpp
include/tradingbot/order/: dry_run_dispatcher.hpp  live_order_dispatcher.hpp  order_monitor.hpp  order_queue.hpp  rate_limited_executor.hpp
include/tradingbot/paper/: backtest_runner.hpp  paper_portfolio_simulator.hpp
include/tradingbot/persistence/: api_event_mapper.hpp  audit_event_mapper.hpp  bot_run_mapper.hpp  candle_mapper.hpp  decision_mapper.hpp  instrument_mapper.hpp  order_history_mapper.hpp  persistence_worker.hpp  quote_snapshot_mapper.hpp  (+9 more)
scripts/: continuous_websocket_dashboard.py  download_historical_candles.py  live_rsi_divergence_scan.py  live_websocket_scanner.py  offline_historical_scanner_report.py  run_tests.ps1
src/app/: app_runner.cpp  cli.cpp  main.cpp  operating_mode.cpp  order_display.cpp
src/core/: domain.cpp
src/infra/: candle_service.cpp  config.cpp  credentials.cpp  instrument_csv.cpp  instrument_universe.cpp  live_scanner_config_mapper.cpp  logger.cpp  market_feed.cpp  market_quote_service.cpp  portfolio_sync_service.cpp  time_utils.cpp  upstox_api_client.cpp  upstox_instrument_json.cpp  upstox_instrument_json_cache.cpp  win_http_transport.cpp
src/order/: dry_run_dispatcher.cpp  live_order_dispatcher.cpp  order_monitor.cpp  order_queue.cpp  rate_limited_executor.cpp
src/paper/: backtest_runner.cpp  paper_portfolio_simulator.cpp
src/persistence/: api_event_mapper.cpp  audit_event_mapper.cpp  bot_run_mapper.cpp  candle_mapper.cpp  decision_mapper.cpp  instrument_mapper.cpp  order_history_mapper.cpp  persistence_worker.cpp  quote_snapshot_mapper.cpp  risk_event_mapper.cpp  sqlite_candle_cache.cpp  sqlite_database.cpp  sqlite_instrument_store.cpp  sqlite_migrations.cpp  sqlite_order_history_reader.cpp  sqlite_persistence_sink.cpp  sqlite_time.cpp  strategy_signal_mapper.cpp
src/runtime/: worker_group.cpp
src/scan/: instrument_partitioner.cpp  live_candle_aggregator.cpp  live_rsi_divergence_engine.cpp  live_scanner_decision_pipeline.cpp  live_scanner_persistence.cpp  live_scanner_ranking_pipeline.cpp  live_scanner_runtime_cycle.cpp  macd_crossover_signal_scanner.cpp  provisional_rsi_divergence_scanner.cpp  rsi_divergence_signal_mapper.cpp
src/strategy/: advanced_buy_strategies.cpp  buy_strategies.cpp  exit_engine.cpp  indicators.cpp  kill_switch.cpp  market_session.cpp  risk_manager.cpp  scanner_candidate_selector.cpp  scanner_signal_ranker.cpp  sell_strategies.cpp  signal_aggregation.cpp  strategy.cpp
tests/: CMakeLists.txt
tests/app/: app_runner_tests.cpp  cli_tests.cpp  operating_mode_tests.cpp  order_display_tests.cpp
tests/core/: domain_tests.cpp
tests/infra/: candle_service_tests.cpp  config_tests.cpp  credentials_tests.cpp  instrument_csv_tests.cpp  live_scanner_config_mapper_tests.cpp  logger_tests.cpp  market_feed_tests.cpp  market_quote_service_tests.cpp  portfolio_sync_service_tests.cpp  time_utils_tests.cpp  upstox_api_client_tests.cpp  upstox_instrument_json_cache_tests.cpp  upstox_instrument_json_tests.cpp
tests/integration/: dry_run_flow_tests.cpp
tests/order/: dry_run_dispatcher_tests.cpp  live_order_dispatcher_tests.cpp  order_monitor_tests.cpp  order_queue_tests.cpp  rate_limited_executor_tests.cpp
tests/paper/: backtest_runner_tests.cpp  paper_portfolio_simulator_tests.cpp
tests/persistence/: api_event_mapper_tests.cpp  audit_event_mapper_tests.cpp  bot_run_mapper_tests.cpp  candle_mapper_tests.cpp  decision_mapper_tests.cpp  instrument_mapper_tests.cpp  order_history_mapper_tests.cpp  persistence_worker_tests.cpp  quote_snapshot_mapper_tests.cpp  risk_event_mapper_tests.cpp  sqlite_candle_cache_tests.cpp  sqlite_database_tests.cpp  sqlite_instrument_store_tests.cpp  sqlite_migrations_tests.cpp  sqlite_order_history_reader_tests.cpp  sqlite_persistence_sink_tests.cpp  sqlite_time_tests.cpp  strategy_signal_mapper_tests.cpp
tests/runtime/: worker_group_tests.cpp
tests/scan/: live_candle_aggregator_tests.cpp  live_rsi_divergence_engine_tests.cpp  live_scanner_decision_pipeline_tests.cpp  live_scanner_persistence_tests.cpp  live_scanner_ranking_pipeline_tests.cpp  live_scanner_runtime_cycle_tests.cpp  macd_crossover_signal_scanner_tests.cpp  provisional_rsi_divergence_scanner_tests.cpp  rsi_divergence_signal_mapper_tests.cpp
tests/scripts/: continuous_websocket_dashboard_tests.py  download_historical_candles_tests.py  live_rsi_divergence_scan_tests.py  live_websocket_scanner_tests.py  offline_historical_scanner_report_tests.py
tests/strategy/: advanced_buy_strategies_tests.cpp  buy_strategies_tests.cpp  exit_engine_tests.cpp  indicators_tests.cpp  kill_switch_tests.cpp  market_session_tests.cpp  risk_manager_tests.cpp  scanner_candidate_selector_tests.cpp  scanner_signal_ranker_tests.cpp  sell_strategies_tests.cpp  signal_aggregation_tests.cpp  strategy_tests.cpp
(+23 files in other folders)
