add_executable(tradingbot_cli_tests
    app/cli_tests.cpp
)

target_link_libraries(tradingbot_cli_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_cli_tests COMMAND tradingbot_cli_tests)

add_executable(tradingbot_operating_mode_tests
    app/operating_mode_tests.cpp
)

target_link_libraries(tradingbot_operating_mode_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_operating_mode_tests COMMAND tradingbot_operating_mode_tests)

add_executable(tradingbot_domain_tests
    core/domain_tests.cpp
)

target_link_libraries(tradingbot_domain_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_domain_tests COMMAND tradingbot_domain_tests)

add_executable(tradingbot_config_tests
    infra/config_tests.cpp
)

target_link_libraries(tradingbot_config_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_config_tests COMMAND tradingbot_config_tests)

add_executable(tradingbot_credentials_tests
    infra/credentials_tests.cpp
)

target_link_libraries(tradingbot_credentials_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_credentials_tests COMMAND tradingbot_credentials_tests)

add_executable(tradingbot_instrument_csv_tests
    infra/instrument_csv_tests.cpp
)

target_link_libraries(tradingbot_instrument_csv_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_instrument_csv_tests COMMAND tradingbot_instrument_csv_tests)

add_executable(tradingbot_logger_tests
    infra/logger_tests.cpp
)

target_link_libraries(tradingbot_logger_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_logger_tests COMMAND tradingbot_logger_tests)

add_executable(tradingbot_upstox_api_client_tests
    infra/upstox_api_client_tests.cpp
)

target_link_libraries(tradingbot_upstox_api_client_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_upstox_api_client_tests COMMAND tradingbot_upstox_api_client_tests)

add_executable(tradingbot_market_quote_service_tests
    infra/market_quote_service_tests.cpp
)

target_link_libraries(tradingbot_market_quote_service_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_market_quote_service_tests COMMAND tradingbot_market_quote_service_tests)

add_executable(tradingbot_candle_service_tests
    infra/candle_service_tests.cpp
)

target_link_libraries(tradingbot_candle_service_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_candle_service_tests COMMAND tradingbot_candle_service_tests)

add_executable(tradingbot_market_feed_tests
    infra/market_feed_tests.cpp
)

target_link_libraries(tradingbot_market_feed_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_market_feed_tests COMMAND tradingbot_market_feed_tests)

add_executable(tradingbot_portfolio_sync_service_tests
    infra/portfolio_sync_service_tests.cpp
)

target_link_libraries(tradingbot_portfolio_sync_service_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_portfolio_sync_service_tests COMMAND tradingbot_portfolio_sync_service_tests)

add_executable(tradingbot_indicators_tests
    strategy/indicators_tests.cpp
)

target_link_libraries(tradingbot_indicators_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_indicators_tests COMMAND tradingbot_indicators_tests)

add_executable(tradingbot_strategy_tests
    strategy/strategy_tests.cpp
)

target_link_libraries(tradingbot_strategy_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_strategy_tests COMMAND tradingbot_strategy_tests)

add_executable(tradingbot_buy_strategies_tests
    strategy/buy_strategies_tests.cpp
)

target_link_libraries(tradingbot_buy_strategies_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_buy_strategies_tests COMMAND tradingbot_buy_strategies_tests)

add_executable(tradingbot_advanced_buy_strategies_tests
    strategy/advanced_buy_strategies_tests.cpp
)

target_link_libraries(tradingbot_advanced_buy_strategies_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_advanced_buy_strategies_tests COMMAND tradingbot_advanced_buy_strategies_tests)

add_executable(tradingbot_sell_strategies_tests
    strategy/sell_strategies_tests.cpp
)

target_link_libraries(tradingbot_sell_strategies_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_sell_strategies_tests COMMAND tradingbot_sell_strategies_tests)

add_executable(tradingbot_signal_aggregation_tests
    strategy/signal_aggregation_tests.cpp
)

target_link_libraries(tradingbot_signal_aggregation_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_signal_aggregation_tests COMMAND tradingbot_signal_aggregation_tests)

add_executable(tradingbot_exit_engine_tests
    strategy/exit_engine_tests.cpp
)

target_link_libraries(tradingbot_exit_engine_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_exit_engine_tests COMMAND tradingbot_exit_engine_tests)

add_executable(tradingbot_risk_manager_tests
    strategy/risk_manager_tests.cpp
)

target_link_libraries(tradingbot_risk_manager_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_risk_manager_tests COMMAND tradingbot_risk_manager_tests)

add_executable(tradingbot_kill_switch_tests
    strategy/kill_switch_tests.cpp
)

target_link_libraries(tradingbot_kill_switch_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_kill_switch_tests COMMAND tradingbot_kill_switch_tests)

add_executable(tradingbot_market_session_tests
    strategy/market_session_tests.cpp
)

target_link_libraries(tradingbot_market_session_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_market_session_tests COMMAND tradingbot_market_session_tests)

add_executable(tradingbot_order_queue_tests
    order/order_queue_tests.cpp
)

target_link_libraries(tradingbot_order_queue_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_order_queue_tests COMMAND tradingbot_order_queue_tests)

add_executable(tradingbot_rate_limited_executor_tests
    order/rate_limited_executor_tests.cpp
)

target_link_libraries(tradingbot_rate_limited_executor_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_rate_limited_executor_tests COMMAND tradingbot_rate_limited_executor_tests)

add_executable(tradingbot_dry_run_dispatcher_tests
    order/dry_run_dispatcher_tests.cpp
)

target_link_libraries(tradingbot_dry_run_dispatcher_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_dry_run_dispatcher_tests COMMAND tradingbot_dry_run_dispatcher_tests)

add_executable(tradingbot_live_order_dispatcher_tests
    order/live_order_dispatcher_tests.cpp
)

target_link_libraries(tradingbot_live_order_dispatcher_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_live_order_dispatcher_tests COMMAND tradingbot_live_order_dispatcher_tests)

add_executable(tradingbot_order_monitor_tests
    order/order_monitor_tests.cpp
)

target_link_libraries(tradingbot_order_monitor_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_order_monitor_tests COMMAND tradingbot_order_monitor_tests)

add_executable(tradingbot_worker_group_tests
    runtime/worker_group_tests.cpp
)

target_link_libraries(tradingbot_worker_group_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_worker_group_tests COMMAND tradingbot_worker_group_tests)

add_executable(tradingbot_sqlite_migrations_tests
    persistence/sqlite_migrations_tests.cpp
)

target_link_libraries(tradingbot_sqlite_migrations_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_sqlite_migrations_tests COMMAND tradingbot_sqlite_migrations_tests)

add_executable(tradingbot_persistence_worker_tests
    persistence/persistence_worker_tests.cpp
)

target_link_libraries(tradingbot_persistence_worker_tests PRIVATE tradingbot_core)

add_test(NAME tradingbot_persistence_worker_tests COMMAND tradingbot_persistence_worker_tests)
